# EzyMart_by_EvoQ

./: .gitignore  pyproject.toml
ezymart_by_evoq/: factory.py  main.py
ezymart_by_evoq/app/models/: base.py  cart.py  order.py  payment.py  products.py  users.py
ezymart_by_evoq/app/validators/: email_validatior.py
ezymart_by_evoq/product/: models.py  routes.py  schemas.py  services.py
ezymart_by_evoq/product/routes/: routes.py
ezymart_by_evoq/users/: models.py  routes.py  schemas.py  services.py  utils.py  validatiors.py
migrations/models/: 0_20231104022450_init.py  1_20231105140329_update.py  2_20231106141601_update.py
